--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@
     /* Ring: primary green */
     --ring: 141 89% 47%;
     --radius: 0.5rem;
+    --modal-arrow: 0 0% 0%;
   }
 
   .dark {
@@ -78,6 +79,7 @@
     --border: 0 0% 50%;
     --input: 0 0% 50%;
     --ring: 141 89% 47%;
+    --modal-arrow: 0 0% 100%;
   }
 }
 
@@ -114,7 +116,7 @@
 }
 
 .wallet-adapter-button svg path {
-  fill: hsl(var(--border));
+  fill: hsl(var(--modal-arrow));
 }
 
 .wallet-adapter-button-trigger {
@@ -129,6 +131,10 @@
 
 .wallet-adapter-button:not([disabled]):hover {
   background-color: hsl(var(--primary) / 0.9);
+}
+
+html:not(.dark) .wallet-adapter-button:not([disabled]):hover svg path {
+  fill: hsl(var(--background));
 }
 
 .wallet-adapter-button[disabled] {
